@@ -111,7 +111,7 @@ class Smarty extends Smarty_Internal_TemplateBase {
     // config var settings
     public $config_overwrite = true; //Controls whether variables with the same name overwrite each other.
     public $config_booleanize = true; //Controls whether config values of on/true/yes and off/false/no get converted to boolean
-    public $config_read_hidden = true; //Controls whether hidden config sections/vars are read from the file.       
+    public $config_read_hidden = true; //Controls whether hidden config sections/vars are read from the file.         
     // config vars
     public $config_vars = array(); 
     // assigned tpl vars
@@ -167,13 +167,18 @@ class Smarty extends Smarty_Internal_TemplateBase {
     // start time for execution time calculation
     public $start_time = 0; 
     // set default time zone
-    public $set_timezone = true;
+    public $set_timezone = true; 
+    // has multibyte string functions?
+    public $has_mb = false;
     /**
     * Class constructor, initializes basic smarty properties
     */
     public function __construct()
     {
-        mb_internal_encoding($this->resource_char_set);
+        if (is_callable('mb_internal_encoding')) {
+            $this->has_mb = true;
+            mb_internal_encoding($this->resource_char_set);
+        } 
         if ($this->set_timezone and function_exists("date_default_timezone_set") and function_exists("date_default_timezone_get")) {
             date_default_timezone_set(date_default_timezone_get());
         } 
@@ -199,7 +204,6 @@ class Smarty extends Smarty_Internal_TemplateBase {
         $this->plugin_handler = new Smarty_Internal_Plugin_Handler;
         $this->loadPlugin('Smarty_Internal_Run_Filter');
         $this->filter_handler = new Smarty_Internal_Run_Filter;
-
         if (!$this->debugging && $this->debugging_ctrl == 'URL') {
             $_query_string = $this->request_use_auto_globals ? isset($_SERVER['QUERY_STRING']) ? $_SERVER['QUERY_STRING']:'' : isset($GLOBALS['HTTP_SERVER_VARS']['QUERY_STRING']) ? $GLOBALS['HTTP_SERVER_VARS']['QUERY_STRING']:'';
             if (false !== strpos($_query_string, $this->smarty_debug_id)) {
