@@ -12,29 +12,30 @@
 * Type:     modifier<br>
 * Name:     truncate<br>
 * Purpose:  Truncate a string to a certain length if necessary,
-*            optionally splitting in the middle of a word, and
-*            appending the $etc string or inserting $etc into the middle.
+*             optionally splitting in the middle of a word, and
+*             appending the $etc string or inserting $etc into the middle.
 * 
 * @link http://smarty.php.net/manual/en/language.modifier.truncate.php truncate (Smarty online manual)
 * @author Monte Ohrt <monte at ohrt dot com> 
-* @param string $string input string 
+* @param string $string input string
 * @param integer $length lenght of truncated text
-* @param string $etc end string 
+* @param string $etc end string
 * @param boolean $break_words truncate at word boundary
 * @param boolean $middle truncate in the middle of text
 * @return string truncated string
 */
-    function smarty_modifier_truncate($string, $length = 80, $etc = '...',
-                                  $break_words = false, $middle = false)     
-    {
+function smarty_modifier_truncate($string, $length = 80, $etc = '...',
+    $break_words = false, $middle = false)
+{
+    if ($length == 0)
+        return '';
 
-       if ($length == 0)
-            return '';
-
+    $smarty = Smarty::instance();
+    if ($smarty->has_mb) {
         if (mb_strlen($string) > $length) {
             $length -= min($length, mb_strlen($etc));
             if (!$break_words && !$middle) {
-                $string = mb_ereg_replace('/\s+?(\S+)?$/', '', mb_substr($string, 0, $length + 1),'p');
+                $string = mb_ereg_replace('/\s+?(\S+)?$/', '', mb_substr($string, 0, $length + 1), 'p');
             } 
             if (!$middle) {
                 return mb_substr($string, 0, $length) . $etc;
@@ -44,5 +45,21 @@
         } else {
             return $string;
         } 
+    } else {
+        if (strlen($string) > $length) {
+            $length -= min($length, strlen($etc));
+            if (!$break_words && !$middle) {
+                $string = ereg_replace('/\s+?(\S+)?$/', '', substr($string, 0, $length + 1), 'p');
+            } 
+            if (!$middle) {
+                return substr($string, 0, $length) . $etc;
+            } else {
+                return substr($string, 0, $length / 2) . $etc . substr($string, - $length / 2);
+            } 
+        } else {
+            return $string;
+        } 
     } 
+} 
+
 ?>
